css scrollbar fix

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -146,7 +146,10 @@ li.list-box {
     margin-top: 52px; }
 
   .header-pic {
-    margin-top: -52px; } }
+    margin-top: -52px; }
+
+  .wrapper {
+    margin-left: 0px !important; } }
 /****** 800 and above ******/
 @media (min-width: 800px) {
   .public-stations.bottom {
@@ -179,6 +182,7 @@ li.list-box {
   .main {
     width: 1200px; } }
 .main {
+  height: 100%;
   margin: 0px auto;
   /*background-color: #FFF;
   box-shadow: 0px 16px 32px #d9e0ed;*/ }
@@ -196,11 +200,19 @@ li.list-box {
 
 .menu-left {
   display: none;
-  width: 30%;
-  background-color: #FFF;
-  box-shadow: 0px 16px 32px #d9e0ed; }
+  position: fixed;
+  width: 400px;
+  overflow: hidden;
+  max-height: 100%;
+  margin-right: -100px;
+  padding-right: 100px;
+  top: 0;
+  bottom: 0;
+  overflow: auto; }
 
 .wrapper {
+  position: relative;
+  margin-left: 400px;
   background-color: #FFF;
   box-shadow: 8px 16px 32px #d9e0ed; }
 
